--- a/index.html
+++ b/index.html
@@ -114,6 +114,15 @@ https://www.tooplate.com/view/2115-marvel
                 <div class="owl-carousel owl-theme">
                   <div class="item">
                     <div class="project-info">
+                      <img src="images/project/p4.png" class="img-fluid mt-4" alt="project image" >
+                      <div class="custom-btn-group mt-4">
+                        <a href="https://hoodboyclub.com/" class="btn custom-btn custom-btn-bg custom-btn-link">Hoodboyclub NFT</a>
+                      </div>
+                    </div>
+                  </div>
+
+                  <div class="item">
+                    <div class="project-info">
                       <img src="images/project/p1.png" class="img-fluid mt-4" alt="project image" >
                       <div class="custom-btn-group mt-4">
                         <a href="https://kolstore.co/" class="btn custom-btn custom-btn-bg custom-btn-link">KOLStore.co</a>
@@ -198,42 +207,20 @@ https://www.tooplate.com/view/2115-marvel
                 </div>
 
                 <div class="col-lg-6 col-12">
-                  <h2 class="mb-4 mobile-mt-2">Educations</h2>
+                  <h2 class="mb-4 mobile-mt-2">Others</h2>
 
                     <div class="timeline">
                         <div class="timeline-wrapper">
                              <div class="timeline-yr">
-                                  <span>2017</span>
+                                  <span>Current</span>
                              </div>
                              <div class="timeline-info">
-                                  <h3><span>Mobile Web</span><small>Master Design</small></h3>
-                                  <p>Please tell your friends about Tooplate website. That would be very helpful. We need your support.</p>
+                                  <h3><span>NFT Creator</span><small>Hoodboyclub NFT</small></h3>
+                                  <p>Create The voxel artwork and build our own community through pentas.io</p>
                              </div>
                         </div>
-
-                        <div class="timeline-wrapper">
-                            <div class="timeline-yr">
-                                <span>2015</span>
-                            </div>
-                            <div class="timeline-info">
-                                <h3><span>User Interfaces</span><small>Creative Agency</small></h3>
-                                <p>Tooplate is a great website to download HTML templates without any login or email.</p>
-                            </div>
-                        </div>
-                        
-                        <div class="timeline-wrapper">
-                            <div class="timeline-yr">
-                                <span>2013</span>
-                            </div>
-                            <div class="timeline-info">
-                                <h3><span>Artwork Design</span><small>New Art School</small></h3>
-                                <p>You can freely use Tooplate's templates for your business or personal sites. You cannot redistribute this template without a permission.</p>
-                            </div>
-                        </div>
-
                     </div>
                 </div>
-                
             </div>
         </div>
     </section>
