--- a/index.html
+++ b/index.html
@@ -46,9 +46,9 @@ https://www.tooplate.com/view/2115-marvel
                     <li class="nav-item">
                         <a href="#project" class="nav-link"><span data-hover="Projects">Projects</span></a>
                     </li>
-                    <li class="nav-item">
+                    <!-- <li class="nav-item">
                         <a href="#resume" class="nav-link"><span data-hover="Resume">Resume</span></a>
-                    </li>
+                    </li> -->
                     <li class="nav-item">
                         <a href="#contact" class="nav-link"><span data-hover="Contact">Contact</span></a>
                     </li>
@@ -85,8 +85,9 @@ https://www.tooplate.com/view/2115-marvel
                         <p>Building a successful product is a challenge. I am highly energetic in user experience design, interfaces and web development.</p>
                         
                         <div class="custom-btn-group mt-4">
-                          <a href="images/pdf/resume.pdf" target="_blank" class="btn mr-lg-2 custom-btn"><i class='uil uil-file-alt'></i> View Resume</a>
-                          <a href="#contact" class="btn custom-btn custom-btn-bg custom-btn-link">Get a free quote</a>
+                          <!-- <a href="images/pdf/resume.pdf" target="_blank" class="btn mr-lg-2 custom-btn"><i class='uil uil-file-alt'></i> View Resume</a> -->
+                          <a href="#contact" target="_blank" class="btn mr-lg-2 custom-btn"><i class='uil uil-file-alt'></i>Get a free quote</a>
+                          <!-- <a href="#contact" class="btn custom-btn custom-btn-bg custom-btn-link">Get a free quote</a> -->
                         </div>
                     </div>
                 </div>
@@ -103,54 +104,49 @@ https://www.tooplate.com/view/2115-marvel
 
     <!-- PROJECTS -->
     <section class="project py-5" id="project">
-        <div class="container">
-          <div class="row">
-            <div class="col-lg-11 text-center mx-auto col-12">
-
-                <div class="col-lg-8 mx-auto">
-                  <h2>Things I already develop for now</h2>
-                </div>
-
-                <div class="owl-carousel owl-theme">
-                  <div class="item">
-                    <div class="project-info">
-                      <img src="images/project/p4.png" class="img-fluid mt-4" alt="project image" >
-                      <div class="custom-btn-group mt-4">
-                        <a href="https://hoodboyclub.com/" class="btn custom-btn custom-btn-bg custom-btn-link">Hoodboyclub NFT</a>
-                      </div>
-                    </div>
-                  </div>
-
-                  <div class="item">
-                    <div class="project-info">
-                      <img src="images/project/p1.png" class="img-fluid mt-4" alt="project image" >
-                      <div class="custom-btn-group mt-4">
-                        <a href="https://kolstore.co/" class="btn custom-btn custom-btn-bg custom-btn-link">KOLStore.co</a>
-                      </div>
-                    </div>
-                  </div>
-
-                  <div class="item">
-                    <div class="project-info">
-                      <img src="images/project/p3.png" class="img-fluid mt-4" alt="project image" >
-                      <div class="custom-btn-group mt-4">
-                        <a href="https://kolmall.co/" class="btn custom-btn custom-btn-bg custom-btn-link">KOLMall.co</a>
-                      </div>
-                    </div>
-                  </div>
-
-                  <div class="item">
-                    <div class="project-info">
-                      <img src="images/project/p2.png" class="img-fluid mt-4" alt="project image" >
-                      <div class="custom-btn-group mt-4">
-                        <a href="https://ierp.tk/" class="btn custom-btn custom-btn-bg custom-btn-link">Polyware IERP System</a>
-                      </div>
-                    </div>
-                  </div>
-                </div>
+      <div class="container">
+        <div class="row">
+          <div class="col-lg-12 text-center">
+            <h2>Things I've Developed</h2>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-md-4">
+            <div class="project-info">
+              <img src="images/project/p4.png" class="img-fluid mt-4" alt="project image">
+              <div class="custom-btn-group mt-4">
+                <a href="https://hoodboyclub.com/" class="btn custom-btn-link">Hoodboyclub NFT</a>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-4">
+            <div class="project-info">
+              <img src="images/project/p1.png" class="img-fluid mt-4" alt="project image">
+              <div class="custom-btn-group mt-4">
+                <a href="https://kolstore.co/" class="btn custom-btn-link">KOLStore.co</a>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-4">
+            <div class="project-info">
+              <img src="images/project/p3.png" class="img-fluid mt-4" alt="project image">
+              <div class="custom-btn-group mt-4">
+                <a href="https://kolmall.co/" class="btn custom-btn-link">KOLMall.co</a>
+              </div>
             </div>
           </div>
         </div>
+        <div class="row">
+          <div class="col-md-4">
+            <div class="project-info">
+              <img src="images/project/p2.png" class="img-fluid mt-4" alt="project image">
+              <div class="custom-btn-group mt-4">
+                <a href="https://ierp.tk/" class="btn custom-btn-link">Polyware IERP System</a>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
     </section>
 
     <!-- FEATURES -->
