--- a/index.html
+++ b/index.html
@@ -4,9 +4,6 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta name="description" content="">
-  <meta name="author" content="">
-
   <title>mrstwo.com - level up your hustle</title>
   <link rel="icon" href="images/favicon.png" type="image/png">
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;800&display=swap" rel="stylesheet">
@@ -17,7 +14,10 @@
   <link rel="stylesheet" href="css/tooplate-style.css">
 
   <style>
-    /* Popup Notification Styling */
+    body {
+      font-family: 'Poppins', sans-serif;
+    }
+
     #payment-popup {
       position: fixed;
       bottom: 20px;
@@ -68,22 +68,19 @@
             <span class="highlight rotate-right yellow text-dark">Up</span>
             <span class="highlight rotate-left black text-white">Your Hustle</span>
           </h1>
-          <span><strong>content hari-hari, <br>tapi tak jana income? Rugi kot!</strong> </span>
+          <span><strong>content hari-hari, <br>tapi tak jana income? Rugi kot!</strong></span>
         </div>
       </div>
-      <div class="row">
-        <div class="col">
-          <div class="project-info text-center">
-            <div class="sold-out-badge">12.5K Sold</div>
-            <img src="images/ebook.png" class="img-fluid mt-4" alt="project image">
 
+      <div class="row">
+        <div class="col text-center">
+          <div class="project-info">
+            <div class="sold-out-badge">12.5K Sold</div>
+            <img src="images/ebook.png" class="img-fluid mt-4" alt="ebook image">
             <div class="mt-3">
-              <p style="margin: 0; font-size: 18px; color: #888;">
-                <del>RM119.00</del>
-              </p>
+              <p style="margin: 0; font-size: 18px; color: #888;"><del>RM119.00</del></p>
               <h4 style="font-weight: bold; color: red;">RM79.00</h4>
             </div>
-
             <div class="custom-btn-group">
               <a class="btn btn-lg"
                 style="background-color: #ccc; color: #666; border: 2px solid #999; font-size: 16px; pointer-events: none; cursor: not-allowed; opacity: 0.6;">
@@ -93,15 +90,134 @@
           </div>
         </div>
       </div>
+
+      <!-- Topik Slide -->
+      <section id="ebook-topics" class="my-5">
+        <div class="container">
+          <div class="row mb-4">
+            <div class="col text-center">
+              <h2 class="fw-bold">Apa Yang Anda Akan Pelajari</h2>
+              <p class="text-muted">Ebook ini disusun untuk bantu anda jana income digital secara konsisten.</p>
+            </div>
+          </div>
+          <div class="row">
+            <div class="col">
+              <div class="owl-carousel owl-theme">
+
+                <div class="item text-left p-4 bg-light rounded shadow-sm">
+                  <h5 class="fw-bold"><span class="highlight yellow text-dark">Topik 1</span></h5>
+                  <p><strong>Teknik Cari Topik Produk Digital yang <span style="color: #ff74e1;">High Demand & Senang
+                        Jual</span></strong></p>
+                  <ul style="padding-left: 20px;">
+                    <li>Cara cari idea produk digital yang <strong style="color: #ff74e1;">high demand</strong></li>
+                    <li>Kenal pasti topik yang <strong style="color: #ff74e1;">senang dijual</strong></li>
+                    <li>Contoh topik yang terbukti <strong style="color: #ff74e1;">laku keras</strong></li>
+                  </ul>
+
+
+                </div>
+
+                <div class="item text-left p-4 bg-light rounded shadow-sm">
+                  <h5 class="fw-bold"><span class="highlight yellow text-dark">Topik 2</span></h5>
+                  <p><strong>Cara hasilkan <span v>eBook atau Video Panduan</span></strong></p>
+                  <ul style="padding-left: 20px;">
+                    <li>Belajar cara hasilkan eBook dari A–Z dengan <strong style="color: #ff74e1;">AI</strong></li>
+                    <li>Cara record <strong style="color: #ff74e1;">Video Panduan</strong> dan siapkan jadi 1 modul</li>
+                    <li>Teknik <strong style="color: #ff74e1;">Susun & Simpan produk</strong> supaya mudah dihantar
+                      kepada
+                      pelanggan</li>
+                  </ul>
+                </div>
+
+                <div class="item text-left p-4 bg-light rounded shadow-sm">
+                  <h5 class="fw-bold"><span class="highlight yellow text-dark">Topik 3</span></h5>
+                  <p><strong>Cara setup <span style="color: #ff74e1;">Website & Payment Gateway</span></strong></p>
+                  <ul style="padding-left: 20px;">
+                    <li>Cara setup website jualan paling cepat & mudah<br><span style="color: #ff74e1;">(TAK PERLU
+                        CODING,
+                        Tak perlu Design sebab kami bagi FREE Template)</span></li>
+                    <li>Setup Payment Gateway untuk <strong style="color: #ff74e1;">Terima Bayaran Customer</strong>
+                    </li>
+                  </ul>
+                </div>
+
+                <div class="item text-left p-4 bg-light rounded shadow-sm">
+                  <h5 class="fw-bold"><span class="highlight yellow text-dark">Topik 4</span></h5>
+                  <p><strong>Teknik buat Content <span style="color: #ff74e1;">Mudah Dapat Sales</span></strong></p>
+                  <ul style="padding-left: 20px;">
+                    <li>Kami tunjukkan <strong style="color: #ff74e1;">Rahsia</strong> hasilkan content mudah convert
+                    </li>
+                    <li>Strategi <strong style="color: #ff74e1;">Hook dan Offer</strong> untuk letak dalam content</li>
+                  </ul>
+                </div>
+
+                <div class="item text-left p-4 bg-light rounded shadow-sm">
+                  <h5 class="fw-bold"><span class="highlight yellow text-dark">Topik 5</span></h5>
+                  <p><strong>Strategi Marketing <span style="color: #ff74e1;">Meta Ads, TikTok Ads & Free Cost
+                        Marketing</span></strong></p>
+                  <ul style="padding-left: 20px;">
+                    <li>Cara promote produk digital guna <strong>Meta Ads, TikTok Ads</strong> dan juga <strong
+                        style="color: #ff74e1;">Free Marketing</strong></li>
+                    <li>Belajar <strong>Setup Pixel</strong> untuk Meta dan TikTok Ads Conversion</li>
+                  </ul>
+                </div>
+
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <!-- Customer Feedback Section -->
+      <section id="testimoni" class="my-5">
+        <div class="container">
+          <div class="row mb-4">
+            <div class="col text-center">
+              <h2 class="fw-bold">Apa Kata Pembeli</h2>
+              <p class="text-muted">Ramai dah berjaya mula jana income lepas baca eBook ini.</p>
+            </div>
+          </div>
+          <div class="row">
+
+            <div class="col-md-4 mb-4">
+              <div class="p-4 bg-light rounded shadow-sm h-100">
+                <p class="mb-3">“Langkah demi langkah sangat jelas. Saya terus dapat idea & hasilkan produk digital
+                  sendiri dalam masa seminggu.”</p>
+                <h6 class="fw-bold mb-0">Nadia, Selangor</h6>
+                <small class="text-muted">Peniaga Digital</small>
+              </div>
+            </div>
+
+            <div class="col-md-4 mb-4">
+              <div class="p-4 bg-light rounded shadow-sm h-100">
+                <p class="mb-3">“Saya dah banyak join kelas, tapi eBook ni paling praktikal. Terus boleh apply dan mula
+                  jual!”</p>
+                <h6 class="fw-bold mb-0">Hafiz, Johor</h6>
+                <small class="text-muted">Usahawan Part-time</small>
+              </div>
+            </div>
+
+            <div class="col-md-4 mb-4">
+              <div class="p-4 bg-light rounded shadow-sm h-100">
+                <p class="mb-3">“Saya student, tapi dari eBook ni saya berjaya hasilkan eBook sendiri dan dah dapat
+                  jualan pertama.”</p>
+                <h6 class="fw-bold mb-0">Aina, Kuala Lumpur</h6>
+                <small class="text-muted">Pelajar & Content Creator</small>
+              </div>
+            </div>
+
+          </div>
+        </div>
+      </section>
+
     </div>
   </section>
 
+  <!-- Footer -->
   <footer class="py-3 mt-auto">
     <div class="container text-center">
       <p class="mb-0">
-        <strong>Copyright &copy;
-          <span id="currentYear"></span> Stwo Ventures. <br>All rights reserved.
-        </strong>
+        <strong>&copy; <span id="currentYear"></span> Stwo Ventures. All rights reserved.</strong>
       </p>
     </div>
   </footer>
@@ -110,6 +226,12 @@
   <div id="payment-popup">
     <strong id="popup-text">Someone just paid!</strong>
   </div>
+
+  <!-- Scripts -->
+  <script src="js/jquery-3.3.1.min.js"></script>
+  <script src="js/popper.min.js"></script>
+  <script src="js/bootstrap.min.js"></script>
+  <script src="js/owl.carousel.min.js"></script>
 
   <script>
     document.getElementById("currentYear").textContent = new Date().getFullYear();
@@ -133,36 +255,39 @@
         <strong>${email}</strong> has just purchased this eBook<br>
         <small>${minutesAgo} minute(s) ago</small>
       `;
-
       popup.style.display = "block";
 
-      // Hide after 5 seconds
       setTimeout(() => {
         popup.style.display = "none";
       }, 5000);
     }
 
-    // Loop with random interval
     function startPopupLoop() {
-      const interval = Math.floor(Math.random() * 2000) + 2000; // 20s–40s
+      const interval = Math.floor(Math.random() * 20000) + 20000; // 20–40s
       setTimeout(() => {
         showPaymentPopup();
         startPopupLoop();
       }, interval);
     }
 
-    // Start the loop after 5 seconds
     setTimeout(startPopupLoop, 5000);
-  </script>
 
-  <script src="js/jquery-3.3.1.min.js"></script>
-  <script src="js/popper.min.js"></script>
-  <script src="js/bootstrap.min.js"></script>
-  <script src="js/Headroom.js"></script>
-  <script src="js/jQuery.headroom.js"></script>
-  <script src="js/owl.carousel.min.js"></script>
-  <script src="js/smoothscroll.js"></script>
-  <script src="js/custom.js"></script>
+    // Owl Carousel init
+    $(document).ready(function () {
+      $(".owl-carousel").owlCarousel({
+        items: 1,
+        loop: true,
+        margin: 20,
+        autoplay: true,
+        autoplayTimeout: 5000,
+        autoplayHoverPause: true,
+        responsive: {
+          600: { items: 1 },
+          1000: { items: 2 }
+        }
+      });
+    });
+  </script>
 </body>
 
 </html>
