--- a/index.html
+++ b/index.html
@@ -68,24 +68,25 @@
             <span class="highlight rotate-right yellow text-dark">Up</span>
             <span class="highlight rotate-left black text-white">Your Hustle</span>
           </h1>
-          <span><strong>content hari-hari, <br>tapi tak jana income? Rugi kot!</strong></span>
+          <span><strong>Scroll TikTok je?, <br>Mulakan bisnes digital tanpa modal!</strong></span>
         </div>
       </div>
 
       <div class="row">
         <div class="col text-center">
           <div class="project-info">
-            <div class="sold-out-badge">12.5K Sold</div>
+            <div class="sold-out-badge">1.5K Sold</div>
             <img src="images/ebook.png" class="img-fluid mt-4" alt="ebook image">
             <div class="mt-3">
               <p style="margin: 0; font-size: 18px; color: #888;"><del>RM119.00</del></p>
               <h4 style="font-weight: bold; color: red;">RM79.00</h4>
             </div>
             <div class="custom-btn-group">
-              <a class="btn btn-lg"
-                style="background-color: #ccc; color: #666; border: 2px solid #999; font-size: 16px; pointer-events: none; cursor: not-allowed; opacity: 0.6;">
-                <em><strong>SOLD OUT!!!</strong></em>
+              <a href="https://toyyibpay.com/ebook-payment-test" class="btn btn-lg"
+                style="background-color: black; color: white; border: none; font-size: 16px;">
+                <em><strong>BELI SEKARANG</strong></em>
               </a>
+
             </div>
           </div>
         </div>
