--- a/index.html
+++ b/index.html
@@ -79,10 +79,10 @@
             <img src="images/ebook.png" class="img-fluid mt-4" alt="ebook image">
             <div class="mt-3">
               <p style="margin: 0; font-size: 18px; color: #888;"><del>RM119.00</del></p>
-              <h4 style="font-weight: bold; color: red;">RM79.00</h4>
+              <h4 style="font-weight: bold; color: red;">RM39.00</h4>
             </div>
             <div class="custom-btn-group">
-              <a href="https://toyyibpay.com/ebook-payment-test" class="btn btn-lg"
+              <a href="https://toyyibpay.com/Video-Panduan-Zero-Modal" class="btn btn-lg"
                 style="background-color: black; color: white; border: none; font-size: 16px;">
                 <em><strong>BELI SEKARANG</strong></em>
               </a>
