--- a/index.html
+++ b/index.html
@@ -56,6 +56,14 @@
       }
     }
   </style>
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-D0QTQJ914G"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'G-D0QTQJ914G');
+  </script>
 </head>
 
 <body>
