fix button shake

--- a/index.html
+++ b/index.html
@@ -92,12 +92,11 @@
               <h4 style="font-weight: bold; color: red;">RM39.00</h4>
             </div>
             <div class="custom-btn-group">
-              <a href="https://toyyibpay.com/Video-Panduan-Zero-Modal" class="btn btn-lg vibrate-btn"
+              <a href="https://toyyibpay.com/Video-Panduan-Zero-Modal" class="btn btn-lg btn-shake"
                 style="background-color: black; color: white; border: none; font-size: 16px;">
                 <em><strong>BELI SEKARANG</strong></em>
               </a>
             </div>
-
           </div>
         </div>
       </div>
