--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
             <span class="highlight rotate-left black text-white" style="animation-delay: 0.6s;">Your Hustle</span>
           </h1>
           <span class="animate-text">
-            <strong>Scroll TikTok je?, <br>Mulakan bisnes digital tanpa modal!</strong>
+            <strong>Bantu anak belajar, <br>anda jana income! 💵💵</strong>
           </span>
         </div>
       </div>
@@ -101,7 +101,7 @@
         </div>
       </div>
 
-      <!-- Topik Slide -->
+       <!-- Topik Slide -->
       <section id="ebook-topics" class="my-5">
         <div class="container">
           <div class="row mb-4">
@@ -178,47 +178,136 @@
         </div>
       </section>
 
-      <!-- Customer Feedback Section -->
-      <section id="testimoni" class="my-5">
-        <div class="container">
-          <div class="row mb-4">
-            <div class="col text-center">
-              <h2 class="fw-bold">Apa Kata Pembeli</h2>
-              <p class="text-muted">Ramai dah berjaya mula jana income lepas baca eBook ini.</p>
+      <!-- New Product -->
+      <div class="row mt-5">
+        <div class="col text-center">
+          <div class="project-info">
+            <div class="sold-out-badge">500+ Sold</div>
+            <img src="images/math.png" class="img-fluid mt-4" alt="product image">
+            <div class="mt-3">
+              <p style="margin: 0; font-size: 18px; color: #888;"><del>RM15.00</del></p>
+              <h4 style="font-weight: bold; color: red;">RM9.90</h4>
             </div>
-          </div>
-          <div class="row">
-
-            <div class="col-md-4 mb-4">
-              <div class="p-4 bg-light rounded shadow-sm h-100">
-                <p class="mb-3">“Langkah demi langkah sangat jelas. Saya terus dapat idea & hasilkan produk digital
-                  sendiri dalam masa seminggu.”</p>
-                <h6 class="fw-bold mb-0">Nadia, Selangor</h6>
-                <small class="text-muted">Peniaga Digital</small>
-              </div>
+            <div class="custom-btn-group">
+              <a href="https://toyyibpay.com/100-Days-of-Math" class="btn btn-lg btn-shake"
+                style="background-color: black; color: white; border: none; font-size: 16px;">
+                <em><strong>BELI SEKARANG</strong></em>
+              </a>
             </div>
-
-            <div class="col-md-4 mb-4">
-              <div class="p-4 bg-light rounded shadow-sm h-100">
-                <p class="mb-3">“Saya dah banyak join kelas, tapi eBook ni paling praktikal. Terus boleh apply dan mula
-                  jual!”</p>
-                <h6 class="fw-bold mb-0">Hafiz, Johor</h6>
-                <small class="text-muted">Usahawan Part-time</small>
-              </div>
-            </div>
-
-            <div class="col-md-4 mb-4">
-              <div class="p-4 bg-light rounded shadow-sm h-100">
-                <p class="mb-3">“Saya student, tapi dari eBook ni saya berjaya hasilkan eBook sendiri dan dah dapat
-                  jualan pertama.”</p>
-                <h6 class="fw-bold mb-0">Aina, Kuala Lumpur</h6>
-                <small class="text-muted">Pelajar & Content Creator</small>
-              </div>
-            </div>
-
           </div>
         </div>
-      </section>
+      </div>
+
+      <!-- Testimoni Math Worksheet -->
+      <section id="math-topics" class="my-5">
+  <div class="container">
+    <div class="row mb-4">
+      <div class="col text-center">
+        <h2 class="fw-bold">Apa Yang Anak Anda Akan Pelajari</h2>
+        <p class="text-muted">100 Days of Math Challenge direka untuk bantu anak kuasai asas tambah & tolak.</p>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col">
+        <div class="owl-carousel owl-theme">
+          <div class="item text-left p-4 bg-light rounded shadow-sm">
+            <h5 class="fw-bold"><span class="highlight rotate-right yellow text-dark">Hari 1–20</span></h5>
+            <p><strong>Pengenalan asas nombor & penambahan mudah</strong></p>
+            <ul style="padding-left: 20px;">
+              <li>Kenal nombor 1–50</li>
+              <li>Tambah dua nombor satu digit</li>
+              <li>Latihan konsep "lebih besar / lebih kecil"</li>
+            </ul>
+          </div>
+
+          <div class="item text-left p-4 bg-light rounded shadow-sm">
+            <h5 class="fw-bold"><span class="highlight rotate-right yellow text-dark">Hari 21–40</span></h5>
+            <p><strong>Penambahan tahap 2 & pengenalan penolakan</strong></p>
+            <ul style="padding-left: 20px;">
+              <li>Tambah nombor 2 digit</li>
+              <li>Penolakan mudah dengan bantuan visual</li>
+              <li>Latihan word problem asas</li>
+            </ul>
+          </div>
+
+          <div class="item text-left p-4 bg-light rounded shadow-sm">
+            <h5 class="fw-bold"><span class="highlight rotate-right yellow text-dark">Hari 41–70</span></h5>
+            <p><strong>Penolakan tahap 2 & pemantapan konsep</strong></p>
+            <ul style="padding-left: 20px;">
+              <li>Penolakan 2 digit tanpa pinjam</li>
+              <li>Tambah & tolak dalam bentuk masalah</li>
+              <li>Latih tubi harian</li>
+            </ul>
+          </div>
+
+          <div class="item text-left p-4 bg-light rounded shadow-sm">
+            <h5 class="fw-bold"><span class="highlight rotate-right yellow text-dark">Hari 71–100</span></h5>
+            <p><strong>Gabungan latihan tambah & tolak</strong></p>
+            <ul style="padding-left: 20px;">
+              <li>Latihan campuran tambah & tolak</li>
+              <li>Ujian mini setiap 5 hari</li>
+              <li>Soalan cabaran harian dengan bintang ganjaran</li>
+            </ul>
+          </div>
+
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
+
+
+      <!-- Customer Feedback Section -->
+     <section id="testimoni" class="my-5">
+  <div class="container">
+    <div class="row mb-4">
+      <div class="col text-center">
+        <h2 class="fw-bold">Apa Kata Pembeli</h2>
+        <p class="text-muted">Ramai dah berjaya mula jana income lepas baca eBook ini.</p>
+      </div>
+    </div>
+    <div class="row">
+
+      <!-- Testimoni untuk ebook digital product -->
+      <div class="col-md-6 mb-4">
+        <div class="p-4 bg-light rounded shadow-sm h-100">
+          <p class="mb-3">“Langkah demi langkah sangat jelas. Saya terus dapat idea & hasilkan produk digital sendiri dalam masa seminggu.”</p>
+          <h6 class="fw-bold mb-0">Nadia, Selangor</h6>
+          <small class="text-muted">Peniaga Digital</small>
+        </div>
+      </div>
+
+      <div class="col-md-6 mb-4">
+        <div class="p-4 bg-light rounded shadow-sm h-100">
+          <p class="mb-3">“Saya dah banyak join kelas, tapi eBook ni paling praktikal. Terus boleh apply dan mula jual!”</p>
+          <h6 class="fw-bold mb-0">Hafiz, Johor</h6>
+          <small class="text-muted">Usahawan Part-time</small>
+        </div>
+      </div>
+
+      <!-- Testimoni untuk eBook Math Worksheet -->
+      <div class="col-md-6 mb-4">
+        <div class="p-4 bg-light rounded shadow-sm h-100">
+          <p class="mb-3">“Anak saya seronok sangat jawab worksheet cabaran Matematik ni. Setiap hari dia minta buat sendiri tanpa disuruh!”</p>
+          <h6 class="fw-bold mb-0">Puan Liyana, Kelantan</h6>
+          <small class="text-muted">Ibu kepada anak Tahun 1 – <strong>100 Days of Math</strong></small>
+        </div>
+      </div>
+
+      <div class="col-md-6 mb-4">
+        <div class="p-4 bg-light rounded shadow-sm h-100">
+          <p class="mb-3">“Saya cikgu prasekolah, gunakan eBook ni untuk aktiviti harian. Murid sangat fokus bila ada cabaran hari-hari.”</p>
+          <h6 class="fw-bold mb-0">Cikgu Rizal, Melaka</h6>
+          <small class="text-muted">Guru Prasekolah – <strong>100 Days of Math</strong></small>
+        </div>
+      </div>
+
+
+    </div>
+  </div>
+</section>
+
+      
 
     </div>
   </section>
