--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
             <span class="highlight rotate-left black text-white" style="animation-delay: 0.6s;">Your Hustle</span>
           </h1>
           <span class="animate-text">
-            <strong>Bantu anak belajar, <br>anda jana income! 💵💵</strong>
+            <strong>Jom jana income, <br>Dengan product digital! 💵💵</strong>
           </span>
         </div>
       </div>
